--- a/frontend/src/app/globals.scss
+++ b/frontend/src/app/globals.scss
@@ -53,6 +53,8 @@ html {
   /* 5 */
   -webkit-text-size-adjust: 100%;
   /* 5 */
+
+  height: 100%;
 }
 
 /* Sections
@@ -64,6 +66,9 @@ html {
 
 body {
   margin: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /**
