--- a/frontend/src/components/attendance/attendanceClient/AttendanceClient.module.scss
+++ b/frontend/src/components/attendance/attendanceClient/AttendanceClient.module.scss
@@ -4,6 +4,12 @@
 
 .btnArea {
     margin-top: 60px;
+
+    p {
+        margin: 0;
+        font-size: 20px;
+        font-weight: bold;
+    }
 }
 
 .multipleBtn {
