--- a/frontend/src/components/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
+++ b/frontend/src/components/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
@@ -16,7 +16,7 @@
     }
 
     th {
-        padding: 12px 0 12px 48px;
+        padding: 12px 40px;
         text-align: start;
         color: #737373;
     }
@@ -25,7 +25,22 @@
         padding: 12px 0;
     }
 
+    td:last-of-type {
+        padding: 12px 40px;
+        font-size: 12px;
+    }
+
     input {
+        width: 100%;
+        border: 1px solid #e1e1e1;
+        border-radius: 4px;
+        padding: 4px 8px;
+        font-size: 12px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    textarea {
         width: 100%;
         border: 1px solid #e1e1e1;
         border-radius: 4px;
@@ -34,4 +49,15 @@
         font-weight: bold;
         cursor: pointer;
     }
+}
+
+.btnArea {
+    width: 100%;
+    margin-top: 28px;
+    display: flex;
+    justify-content: end;
+}
+
+.btn {
+    width: 16%;
 }
