fix: 勤怠機能において、出勤、退勤、休憩時間等の時間が重なって保存されないようバリデーションを修正

--- a/frontend/src/components/attendance/attendanceClient/AttendanceClient.module.scss
+++ b/frontend/src/components/attendance/attendanceClient/AttendanceClient.module.scss
@@ -16,3 +16,14 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+.errors {
+    color: #fb5555;
+    text-align: start;
+    font-weight: bold;
+    margin-top: 40px;
+
+    ul {
+        margin: 0;
+    }
+}
