--- a/frontend/src/components/attendance/attendanceButton/AttendanceButton.module.scss
+++ b/frontend/src/components/attendance/attendanceButton/AttendanceButton.module.scss
@@ -6,6 +6,7 @@
     font-size: 20px;
     font-weight: bold;
     padding: 8px 40px;
+    cursor: pointer;
 }
 
 .whiteBtn {
@@ -16,4 +17,5 @@
     font-size: 20px;
     font-weight: bold;
     padding: 8px 40px;
+    cursor: pointer;
 }
