--- a/frontend/src/components/admin/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
+++ b/frontend/src/components/admin/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
@@ -11,6 +11,10 @@
 }
 
 .tableBody {
+    tr {
+        height: 80px;
+    }
+
     tr + tr {
         border-top: 2px solid #e1e1e1;
     }
@@ -55,8 +59,7 @@
     text-align: start;
 
     span {
-        line-height: 80px;
-        padding: 0 12px;
+        white-space: pre-wrap;
     }
 }
 
