add: 管理画面における承認機能の実装

--- a/frontend/src/components/admin/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
+++ b/frontend/src/components/admin/attendanceShow/attendanceShowClient/AttendanceShowClient.module.scss
@@ -78,3 +78,13 @@
 .btn {
     width: 16%;
 }
+
+.approveBtn {
+    width: 16%;
+    height: 32px;
+    background: #000000;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
