--- a/frontend/src/components/admin/attendanceStaff/attendanceStaffClient/AttendanceStaffClient.module.scss
+++ b/frontend/src/components/admin/attendanceStaff/attendanceStaffClient/AttendanceStaffClient.module.scss
@@ -116,3 +116,20 @@
     text-decoration: none;
     color: #000;
 }
+
+.btnArea {
+    width: 100%;
+    margin-top: 28px;
+    display: flex;
+    justify-content: end;
+}
+
+.btn {
+    width: 16%;
+    height: 32px;
+    background: #000000;
+    border: none;
+    color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+}
